# ctu_time

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/ctu_time/: __init__.py  ctu.py
tests/: roundtrip_test.py  test_ctu.py
