[tool.poetry]
name = "ctu_time"
version = "0.1.0"
description = "A Python library for CTU (Computed Time Uncoordinated)."
authors = ["Anselm Kiefner <ctu-github@anselm.kiefner.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
